@@ -3,7 +3,7 @@
 
 #define DBG_ALWAYS          0x0000
 #define DBG_DEVICE          0x0001
-#define DBG_SELECT          0x0002
+#define DBG_POLL            0x0002
 #define DBG_CLIENT          0x0004
 #define DBG_ACTION          0x0008
 #define DBG_MEMORY          0x0010
@@ -11,7 +11,7 @@
 
 #define DBG_NAME_TAB {                      \
     { DBG_DEVICE,       "device" },         \
-    { DBG_SELECT,       "select" },         \
+    { DBG_POLL,         "poll"   },         \
     { DBG_CLIENT,       "client" },         \
     { DBG_ACTION,       "action" },         \
     { DBG_MEMORY,       "memory" },         \
